package com.aau.grouping_system.Database;

import java.util.concurrent.ConcurrentHashMap;

import org.springframework.stereotype.Component;

import com.aau.grouping_system.ChatSystem.ChatRoom;
import com.aau.grouping_system.Group.Group;
import com.aau.grouping_system.Project.Project;
import com.aau.grouping_system.Session.Session;
import com.aau.grouping_system.User.Coordinator.Coordinator;
import com.aau.grouping_system.User.SessionMember.Student.Student;
import com.aau.grouping_system.User.SessionMember.Supervisor.Supervisor;

@Component
/// Container for database data.
public class Database {

	/// Data must be stored as a seperate object to allow for
	/// easy saving/serialization.
	private DatabaseData data = new DatabaseData();

	DatabaseMap<? extends DatabaseItem> getMap(Integer id) {
		return data.getMap(id);
	}

	public DatabaseMap<Coordinator> getCoordinators() {
		return data.getCoordinators();
	}

	public DatabaseMap<Session> getSessions() {
		return data.getSessions();
	}

	public DatabaseMap<Supervisor> getSupervisors() {
		return data.getSupervisors();
	}

	public DatabaseMap<Student> getStudents() {
		return data.getStudents();
	}

	public DatabaseMap<Project> getProjects() {
		return data.getProjects();
	}

	public DatabaseMap<Group> getGroups() {
		return data.getGroups();
	}

	public DatabaseMap<ChatRoom> getChatRooms() {
		return data.getChatRooms();
	}

	public ConcurrentHashMap<String, String> getChatRoomKeyIndex() {
		return data.getChatRoomKeyIndex();
	}

	// @formatter:off
	DatabaseData getData() { return data; }
	void setData(DatabaseData data) { this.data = data; }
}
